--- a/product-service.properties
+++ b/product-service.properties
@@ -1,5 +1,5 @@
 
-test.name=test
+test.name=testtesttestone
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL= DEBUG
 spring.jackson.serialization.fail-on-empty-beans=false
